err/pyzimbra.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SOAPpy'...
Compiling './lib/python3.5/site-packages/SOAPpy/Client.py'...
***   File "./lib/python3.5/site-packages/SOAPpy/Client.py", line 99
    raise IOError, "unsupported SOAP protocol"
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SOAPpy/Config.py'...
***   File "./lib/python3.5/site-packages/SOAPpy/Config.py", line 61
    raise AttributeError, \
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SOAPpy/NS.py'...
***   File "./lib/python3.5/site-packages/SOAPpy/NS.py", line 101
    raise Error, "Don't instantiate this"
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SOAPpy/Parser.py'...
***   File "./lib/python3.5/site-packages/SOAPpy/Parser.py", line 121
    raise Error, "expected `SOAP-ENV:Envelope', " \
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SOAPpy/SOAPBuilder.py'...
***   File "./lib/python3.5/site-packages/SOAPpy/SOAPBuilder.py", line 103
    if self.config.debug: print "In build."
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SOAPpy/Server.py'...
***   File "./lib/python3.5/site-packages/SOAPpy/Server.py", line 126
    raise faultType, ("%s:MustUnderstand" % NS.ENV_T,
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SOAPpy/Types.py'...
***   File "./lib/python3.5/site-packages/SOAPpy/Types.py", line 76
    raise Error, "anyType can't be instantiated directly"
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SOAPpy/Utilities.py'...
***   File "./lib/python3.5/site-packages/SOAPpy/Utilities.py", line 87
    raise ValueError, \
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SOAPpy/WSDL.py'...
***   File "./lib/python3.5/site-packages/SOAPpy/WSDL.py", line 44
    print 'stream:', wsdlsource
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/SOAPpy-0.12.22.egg-info'...
Listing './lib/python3.5/site-packages/defusedxml'...
Listing './lib/python3.5/site-packages/defusedxml-0.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyzimbra'...
Compiling './lib/python3.5/site-packages/pyzimbra/base.py'...
***   File "./lib/python3.5/site-packages/pyzimbra/base.py", line 88
    print tb,
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyzimbra/soap_soappy.py'...
***   File "./lib/python3.5/site-packages/pyzimbra/soap_soappy.py", line 150
    except xml.sax.SAXParseException, e:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyzimbra/z'...
Listing './lib/python3.5/site-packages/pyzimbra/z/zobject'...
Listing './lib/python3.5/site-packages/pyzimbra-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/wstools'...
Listing './lib/python3.5/site-packages/wstools-0.4.5.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
